--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "4.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "sass-migrator": "^1.5.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.8.1"
+    "@webpack-cli/serve": "^1.6.1",
+    "webpack-dev-server": "~3"
   }
 }
